# lighting-control

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  info.yml  pyproject.toml  run_tests_local.sh
.github/workflows/: deploy.yml  test.yml
alembic/: env.py
alembic/versions/: 2b2c8787e6ca_add_room_id_to_zones.py  aba3964e0fef_initial_schema.py  b7e3a1f90c12_add_role_permissions_to_invite_codes.py  c4d8e2a71f03_add_roles_table.py  da3b0f22e094_add_expires_at_to_invite_codes.py
data/: lighting.db
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: CreateGuestDialog.tsx  CreateQuickActionDialog.tsx  CreateRoleDialog.tsx  CreateRoomDialog.tsx  CreateScheduleDialog.tsx  EditUserDialog.tsx  InviteLinkDialog.tsx  StateConfigurator.tsx  TOTPSetupDialog.tsx  TargetSelector.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: DashboardPage.tsx  DeviceDetailPage.tsx  DevicesPage.tsx  LoginPage.tsx  QuickActionsPage.tsx  RegisterPage.tsx  RoomsZonesPage.tsx  SchedulesPage.tsx  SettingsPage.tsx  SetupPage.tsx
frontend/src/stores/: auth.ts  ui.ts
nginx/: lights.martinospizza.dev
src/lighting_control/: config.py  main.py
src/lighting_control/auth/: dependencies.py  models.py  router.py  schemas.py  service.py  totp.py
src/lighting_control/db/: engine.py  models.py
src/lighting_control/devices/: discovery.py  models.py  router.py  schemas.py  service.py
src/lighting_control/notifications/: models.py  router.py  schemas.py  service.py
src/lighting_control/quick_actions/: models.py  router.py  schemas.py  service.py
src/lighting_control/scenes/: models.py  router.py  schemas.py  service.py
src/lighting_control/schedules/: engine.py  models.py  (+3 more)
tests/: conftest.py
tests/unit/: test_auth_service.py  test_custom_scenes.py  test_device_service.py  test_quick_action.py  test_schedule_engine.py  test_sun_utils.py
(+8 files in other folders)
