[project]
name = "lighting-control"
version = "__LIGHTING_VERSION__"
description = "Smart home lighting control web app for WiZ devices"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11,<3.14"

dependencies = [
    # Web framework
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    # Task queue
    "celery[redis]>=5.4",
    "redis>=5.0",
    # WiZ device control
    "pywizlight>=0.6",
    # Auth
    "python-jose[cryptography]>=3.3",
    "argon2-cffi>=23.1",
    "webauthn>=2.0",
    "pyotp>=2.9",
    "qrcode[pil]>=7.4",
    "slowapi>=0.1",
    # Push notifications
    "pywebpush>=2.0",
    "py-vapid>=1.9",
    # Scheduling
    "astral>=3.2",
    # HTTP client
    "httpx>=0.27",
    # Cron parsing
    "croniter>=2.0",
    # YAML
    "pyyaml>=6.0",
    # Logging
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lighting_control"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
]

[tool.ruff]
target-version = "py312"
line-length = 160
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.ruff.lint.pycodestyle]
max-line-length = 200

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
